<resources>
    <string name="app_name">ГрузД</string>
    <string name="btn_login">Войти</string>
    <string name="hint_pass">Пароль</string>
    <string name="hint_login">Логин</string>
    <string name="btn_testing">Прверить</string>
    <string name="tv_hint_wagon_number">Номер вагона</string>
    <string name="list_name">На проверке</string>
    <string name="name_zone_hint">Номер зоны разгрузки</string>
    <string name="num_wagon_hint">Номер вагона</string>
    <string name="result_test">Результат анализа</string>
    <string name="sucsess_sending">Данные успешно отправлены!</string>
</resources>