<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_900"
    tools:context=".ShipmentCard">

    <LinearLayout
        android:id="@+id/recContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/foto_view"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvZone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name_zone_hint"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textSize="24dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp"
                tools:text="Зона Б" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itUuid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:hint="@string/num_wagon_hint"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textSize="24dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp"
                tools:text="77786574" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/scanResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:hint="@string/result_test"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textSize="24dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp"
                tools:text="Брак товара" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/foto_view"
        android:layout_width="match_parent"
        android:layout_height="395dp"
        android:layout_marginLeft="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginBottom="130dp"
        android:background="@color/black_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:src="@drawable/ic_button_add_foto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foto_view" />

    <ImageView
        android:id="@+id/btnSendImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:src="@drawable/ic_button_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnImageView"
        app:layout_constraintTop_toBottomOf="@+id/foto_view" />


</androidx.constraintlayout.widget.ConstraintLayout>